Add cw with email to Swedish translator

--- a/_includes/translated.html
+++ b/_includes/translated.html
@@ -16,6 +16,6 @@ utsträckning som är möjligt.
 </p>
 
 <p>
-Kommentarer på översättningen skickas till översättaren via
-email: sm5ouu (at) ssa . se.
+Kommentarer på översättningen skickas till översättaren SM5OUU på
+<a href="./se-translator.mp3">den här email-adressen</a>.
 </p>
