--- a/_includes/translated.html
+++ b/_includes/translated.html
@@ -6,8 +6,8 @@
 eller den tyska som fanns tidigare hos AGCW-DL {% if page.translated
 %} som de såg ut <nobr>{{ page.translated }}</nobr>{% endif %}.  För
 att underlätta underhåll och jämförelser har sidans filnamn behållits
-så när som på ett "se-"-prefix och layouten har bevarats i så stor
-utsträckning som är möjligt.
+så när som på att ett "se-"-prefix har lagts till, och layouten har
+bevarats i så stor utsträckning som möjligt.
 </p>
 <p>Kommentarer på sidans innehåll i den mån översättningen återspeglar
   originalet skickas lämpligen direkt till den ansvarige för
